# obfusbench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  validate.yml
benchmarks/: compact-io.yaml  fhe-based-obfuscator.yaml  lattice-io-v1.yaml
config/: site.yaml
examples/: benchmark.example.yaml
schema/: benchmark.schema.json
sitegen/: __init__.py  __main__.py  build.py  load.py  models.py  utils.py
static/: app.js  styles.css
templates/: 404.html  base.html  implementation.html  index.html
tests/: test_build.py  test_validation.py
